# gigsgo-api

./: .gitignore  README.md  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: test.yaml
app/: main.py  routes.py
app/static/css/: main.css
app/static/favicon/: about.txt
app/templates/: main.html
app/templates/shared/: _base.html
data/: _db.json  data.json
src/: config.py  crud.py  main.py  routes.py
src/static/css/: main.css
src/static/css/main/: css
src/templates/: error.html  main.html
src/templates/shared/: _base.html  _footer.html  _header.html
tests/: test_crud.py  test_main.py
