[project]
name = "gigsgo-api"
dynamic = ["version"]
description = "API for gigs data"
authors = [{ name = "Elliott Steer", email = "essteer@pm.me" }]
dependencies = [
    "fastapi[all]==0.111.0",
    "pytailwindcss==0.2.0",
    "tinydb==4.8.0"
]
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["API", "web"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.8.0",
    "ruff>=0.4.10",
]

[project.urls]
documentation = "https://github.com/essteer/gigsgo-api/blob/main/README.md"
repository = "https://github.com/essteer/gigsgo-api"
issues = "https://github.com/essteer/gigsgo-api/issues"
